# mstickereditor

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config
.githooks/: pre-commit
.github/workflows/: rust.yml
mstickereditor/: Cargo.toml
mstickereditor/scr/: main.rs
mstickereditor/src/: main.rs
mstickereditor/src/sub_commands/: create_index.rs  import.rs  mod.rs  print_shell_completion.rs  set_widget.rs
mstickerlib/: Cargo.toml
mstickerlib/src/: error.rs  image.rs  lib.rs  matrix.rs  sticker.rs  stickerpicker.rs  tg.rs  video.rs
mstickerlib/src/database/: dummy_database.rs  mod.rs  simple_file.rs
mstickerlib/src/matrix/: mod.rs  sticker.rs  stickerpack.rs  stickerpicker.rs
mstickerlib/src/matrix/sticker_formats/: maunium.rs  mod.rs  ponies.rs
mstickerlib/src/sub_commands/: import.rs  mod.rs  set_widget.rs
mstickerlib/src/tg/: mod.rs  sticker.rs  stickerpack.rs
src/: config.rs  lib.rs  main.rs  matrix.rs  stickerpicker.rs  tg.rs
src/sub_commands/: create_index.rs  import.rs  mod.rs
