# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "mstickereditor"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
attohttpc = { version = "0.18", features = ["compress", "json", "rustls"], default-features = false }
directories = "4.0"
flate2 = "1.0"
generic-array = { version = "0.14" , features = ["serde"] }
indicatif = "0.16"
libwebp = "0.1.2"
lottie2gif = "0.2.0"
once_cell = "1.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
structopt = "0.3.25"
tempfile = "3.2"
toml = "0.5.8"
url = "2.2"

[profile.release]
lto = true
opt-level = 3
