# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "mstickereditor"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
description= "import sticker packs from telegram, to be used at the Maunium sticker picker for Matrix"
repository = "https://github.com/LuckyTurtleDev/mstickereditor"
keywords = ["matrix", "sticker", "stickerpicker", "chat", "messaging"]
include = ["/src/**/*.rs", "../LICENSE", "../README.md"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
clap_complete = "3.0"
directories = "4.0"
mstickerlib = { version = "0.0.1", path= "../mstickerlib"}
once_cell = "1.8"
rayon = "1.5"
tokio = { version = "1.21", features = ["rt-multi-thread", "fs", "rt"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.2"
toml = "0.5.8"
url = "2.2"

[features]
default = ["bin"]
bin = []

[profile.release]
lto = true
opt-level = 3
