# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "mstickereditor"
version = "0.3.5"
edition = "2021"
license = "Apache-2.0"
description= "import sticker packs from telegram, to be used at the Maunium sticker picker for Matrix"
repository = "https://github.com/LuckyTurtleDev/mstickereditor"
keywords = ["matrix", "sticker", "stickerpicker", "chat", "messaging"]
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
clap_complete = "3.0"
directories = "5.0.1"
log = "0.4.20"
mstickerlib = { version = "0.3.0", path= "../mstickerlib" , features = ["log"], default-features = false }
my-env-logger-style = { version = "0.2.0", default-features = false }
once_cell = "1.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.2"
tokio = { version = "1.21", features = ["rt-multi-thread", "fs", "rt", "macros"], default-features = false }
toml = { package = "basic-toml", version = "0.1" }
url = "2.2"

[features]
default = ["ffmpeg", "lottie"]
ffmpeg = ["mstickerlib/ffmpeg"]
ffmpeg-build = ["ffmpeg", "mstickerlib/ffmpeg-build"]
lottie = ["mstickerlib/lottie"]

[profile.release]
lto = true
opt-level = 3

[lints]
workspace = true
