# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "mstickerlib"
version = "0.0.1" # ALSO UPDATE DOC LINK
documentation = "https://docs.msrd0.de/mstickerlib/0.0.1/mstickerlib/"
edition = "2021"
license = "Apache-2.0"
description= "Private implementation detail of mstickereditor"
repository = "https://github.com/LuckyTurtleDev/mstickereditor"
include = ["/src/**/*.rs", "../LICENSE"]

[dependencies]
anyhow = "1.0"
serde-big-array = "0.4"
clap = { version = "3.0", features = ["derive"] }
clap_complete = "3.0"
colored = "2.0"
directories = "4.0"
flate2 = "1.0"
futures-util = "0.3.25"
generic-array = { version = "0.14" , features = ["serde"] }
indexmap = { version = "1.9", features = ["serde"] }
indicatif = "0.16"
libwebp = "0.1.2"
lottieconv = { version = "0.2.2", features = ["serde"] }
monostate = "0.1"
once_cell = "1.8"
rayon = "1.5"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls",], default-features = false } # TODO: check for compression option
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.2"
tokio = { version = "1.21", features = ["fs", "sync", "parking_lot"] }
toml = "0.5.8"
url = "2.2"

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }

[build-dependencies]
rustc_version = "0.4.0"

[profile.release]
lto = true
opt-level = 3
