# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "mstickerlib"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description= "Private implementation detail of mstickereditor"
repository = "https://github.com/LuckyTurtleDev/mstickereditor"
include = ["/src/**/*.rs", "/LICENSE", "/README.md"]

[dependencies]
anyhow = "1.0"
derive-getters = "0.3.0"
ffmpeg = { package = "ffmpeg-next", version = "7.0" , optional = true }
flate2 ="1.0"
futures-util = "0.3.25"
generic-array = { version = "0.14" , features = ["serde"] }
gif = { version = "0.12.0", default-features = false , optional = true } # we need this crate only for the gif error, which is not reexported by the lottie crate
indexmap = { version = "2.0", features = ["serde"] }
log = { version = "0.4.17", optional = true }
lottieconv = { version = "0.3.0", features = ["serde"], optional = true  }
monostate = "0.1"
once_cell = "1.8"
rayon = "1.5"
reqwest = { version = "0.12.3", features = ["json", "rustls-tls",], default-features = false } # TODO: check for compression option
serde = { version = "1.0.184", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
sha2 = "0.10"
strum_macros = "0.26"
tempfile = { version = "3.2" , optional = true  }
thiserror = "1.0.57"
tokio = { version = "1.21", features = ["fs", "parking_lot", "sync"] }
tokio-stream = { version = "0.1", features = ["io-util"], default-features = false }
url = "2.2"
webp-animation = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ["ffmpeg", "log", "lottie"]
ffmpeg = ["dep:ffmpeg", "dep:tempfile", "dep:webp-animation"]
ffmpeg-build = ["ffmpeg", "ffmpeg/build"]
log = ["dep:log"]
lottie = ["dep:lottieconv", "dep:tempfile", "dep:webp-animation", "dep:gif"]

[profile.release]
lto = true
opt-level = 3

[lints]
workspace = true


[package.metadata.cargo-all-features]
denylist = ["ffmpeg-build"]
